...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_detail_fragment">

        <ImageButton
            android:id="@+id/btn_prev_step"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/previous_button"
            android:onClick="btnPrevClick"
            android:src="@drawable/ic_navigate_prev" />

        <ImageButton
            android:id="@+id/btn_next_step"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/next_button"
            android:onClick="btnNextClick"
            android:src="@drawable/ic_navigate_next" />
...
